--- a/index.html
+++ b/index.html
@@ -45,81 +45,83 @@
         </nav>
     </header>
     <main>
-        <div id="main-body">
-            <h1 id="welcomeText">Welcome to Guzzler829's Repo</h1>
+        <div class="row justify-content-center">
+            <div id="main-body">
+                <h1 id="welcomeText">Welcome to Guzzler829's Repo</h1>
 
-            <div class="row justify-content-around aboutRow">
-                <div class="col-9 aboutContainer">
-                    <h3 class="subHeading">
-                        About me:
-                    </h3>
-                    <p>
-                        I love music. I play the guitar, bass guitar, ukulele, bagpipes, and a few other instruments. I love cooking and baking, and I work as a baker. Learning languages has been a favorite passtime of mine, and I speak Esperanto and some German. I'd love to travel to Germany and Austria someday. My dream job is to be a US Senator, but that's probably in the distant future. Someday, I hope to live out west, probably in Colorado. Programming is also a big interest of mine— I've been programming since I was about 10 years old, and lately I've gotten much better at it. I've been making iOS tweaks and webpages lately.
-                    </p>
-                    <p>
-                        Currently (May 2022), I am taking a coding boot camp with <a href="https://www.promineotech.com/">Promineo Tech</a>. I hope to get a job in front-end development sometime soon after I finish the boot camp. So far in the boot camp, I've learned the fundamentals of JavaScript, how to make webpages with HTML, how to style webpages with CSS, Bootstrap, and JQuery. Lately I've been working on CSS animations (see below!) and getting better at using Bootstrap. Soon, I'll be learning to use React.JS. I'm excited to enter the field of front-end development, as I've been enjoying the boot camp quite a bit.
-                    </p>
-                </div>
-                <div class="col">
-                    <div class="imageContainer">
-                        <img src="img/me-and-annie.png" alt="A picture of myself and my dog in front of me." id="meAndAnnie" /><br />
-                        <span class="caption">Me and my dog Annie</span>
-                    </div>
-                </div>
-            </div>
-            <div class="jumbotron myJumbotron">
-                <div class="row revealItems">
-                    <div class="col-2" alt="An animation of a coffee cup">
-                        <div class="container" alt="An animation of a coffee cup">
-                            <div class="steamContainer">
-                                <div class="steam steam1"></div>
-                                <div class="steam steam2"></div>
-                                <div class="steam steam3"></div>
-                            </div>
-                            <div class="cup">
-                                <div class="bubbles bubble-1"></div>
-                                <div class="bubbles bubble-2"></div>
-                                <div class="bubbles bubble-3"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col textContainer">
-                        <h1 class="display-4 slideIn">Buy me a coffee?</h1>
-                        <p class="lead moreText">I'd appreciate it greatly.</p>
-                        <hr class="my-4">
-                        <p class="moreText">Thank you for donating. <br /> You can also give to my Cashapp: $guzzler1</p>
-                        <p class="lead jumbotronSubText moreText">
-                            <a class="btn btn-primary btn-lg" href="https://www.buymeacoffee.com/guzzler829" role="button">Buy me a coffee</a>
+                <div class="row justify-content-around aboutRow">
+                    <div class="col-9 aboutContainer">
+                        <h3 class="subHeading">
+                            About me:
+                        </h3>
+                        <p>
+                            I love music. I play the guitar, bass guitar, ukulele, bagpipes, and a few other instruments. I love cooking and baking, and I work as a baker. Learning languages has been a favorite passtime of mine, and I speak Esperanto and some German. I'd love to travel to Germany and Austria someday. My dream job is to be a US Senator, but that's probably in the distant future. Someday, I hope to live out west, probably in Colorado. Programming is also a big interest of mine— I've been programming since I was about 10 years old, and lately I've gotten much better at it. I've been making iOS tweaks and webpages lately.
+                        </p>
+                        <p>
+                            Currently (May 2022), I am taking a coding boot camp with <a href="https://www.promineotech.com/">Promineo Tech</a>. I hope to get a job in front-end development sometime soon after I finish the boot camp. So far in the boot camp, I've learned the fundamentals of JavaScript, how to make webpages with HTML, how to style webpages with CSS, Bootstrap, and JQuery. Lately I've been working on CSS animations (see below!) and getting better at using Bootstrap. Soon, I'll be learning to use React.JS. I'm excited to enter the field of front-end development, as I've been enjoying the boot camp quite a bit.
                         </p>
                     </div>
-                </div>
-            </div>
-            <div class="centerText">
-                <h3 class="subHeading">All my socials:</h3>
-            </div>
-            <div class="row justify-content-around socialMediaImagesRow">
-                <div class="col socialMediaImages">
-                    <div class="centeredContainer">
-                        <a href="https://twitter.com/theguzzler829">
-                            <img src="img/twitter.png" class="img-fluid" /><br />
-                            @theguzzler829
-                        </a>
+                    <div class="col">
+                        <div class="imageContainer">
+                            <img src="img/me-and-annie.png" alt="A picture of myself and my dog in front of me." id="meAndAnnie" /><br />
+                            <span class="caption">Me and my dog Annie</span>
+                        </div>
                     </div>
                 </div>
-                <div class="col socialMediaImages">
-                    <div class="centeredContainer">
-                        <a href="https://www.linkedin.com/in/guzzler/">
-                            <img src="img/linkedin.png" class="img-fluid" /><br />
-                            August Johnson
-                        </a>
+                <div class="jumbotron myJumbotron">
+                    <div class="row revealItems">
+                        <div class="col-2" alt="An animation of a coffee cup">
+                            <div class="container" alt="An animation of a coffee cup">
+                                <div class="steamContainer">
+                                    <div class="steam steam1"></div>
+                                    <div class="steam steam2"></div>
+                                    <div class="steam steam3"></div>
+                                </div>
+                                <div class="cup">
+                                    <div class="bubbles bubble-1"></div>
+                                    <div class="bubbles bubble-2"></div>
+                                    <div class="bubbles bubble-3"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col textContainer">
+                            <h1 class="display-6 slideIn">Buy me a coffee?</h1>
+                            <p class="lead moreText">I'd appreciate it greatly.</p>
+                            <hr class="my-4">
+                            <p class="moreText">Thank you for donating. <br /> You can also give to my Cashapp: $guzzler1</p>
+                            <p class="lead jumbotronSubText moreText">
+                                <a class="btn btn-primary btn-lg" href="https://www.buymeacoffee.com/guzzler829" role="button">Buy me a coffee</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="col socialMediaImages">
-                    <div class="centeredContainer">
-                        <a href="https://www.reddit.com/user/Guzzler829">
-                            <img src="img/reddit.png" class="img-fluid" /><br />
-                            u/Guzzler829
-                        </a>
+                <div class="centerText">
+                    <h3 class="subHeading">All my socials:</h3>
+                </div>
+                <div class="row justify-content-around socialMediaImagesRow">
+                    <div class="col socialMediaImages">
+                        <div class="centeredContainer">
+                            <a href="https://twitter.com/theguzzler829">
+                                <img src="img/twitter.png" class="img-fluid" /><br />
+                                @theguzzler829
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col socialMediaImages">
+                        <div class="centeredContainer">
+                            <a href="https://www.linkedin.com/in/guzzler/">
+                                <img src="img/linkedin.png" class="img-fluid" /><br />
+                                August Johnson
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col socialMediaImages">
+                        <div class="centeredContainer">
+                            <a href="https://www.reddit.com/user/Guzzler829">
+                                <img src="img/reddit.png" class="img-fluid" /><br />
+                                u/Guzzler829
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
